added links to the repo, fixed edit and back button in petcard, tweaked userprofile.js for the delete button

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -109,7 +109,7 @@
 <footer class="footer">
   <div class="content has-text-centered">
     <p>
-      <strong>Pawesome Care</strong> by <a href="https://jgthms.com">Zeina Hares, Michael McCabe and Adam Day</a>. Proud members of the Dog and Cat Spotting Society
+      <strong>Pawesome Care</strong> by <a href="https://github.com/zeinahares">Zeina Hares</a>, <a href="https://github.com/Ekim1473">Michael McCabe</a> and <a href="https://github.com/Sype7973">Adam Day</a>. Proud members of the Dog and Cat Spotting Society
     </p>
   </div>
 </footer>
