--- a/views/petsCard.handlebars
+++ b/views/petsCard.handlebars
@@ -59,8 +59,8 @@
             </div>
           </div>
         </div>
-        <a href="http://localhost:8080/pets" class="button is-info is-large" style="margin-top: 10px;">Back</a>
-        <a href="http://localhost:8080/pets/edit/{{pets.id}}" class="button is-primary is-large" style="margin-top: 10px;">Edit</a>
+        <a href="/pets" class="button is-info is-large" style="margin-top: 10px;">Back</a>
+        <a href="/pets/edit/{{pets.id}}" class="button is-primary is-large" style="margin-top: 10px;">Edit</a>
       </div>
     </div>
     <div class="column" style="padding-top: 20px;">
