--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -33,8 +33,27 @@
       </a>
 
       <a href="/pets/all" class="navbar-item">
-        Pawesome Community
+        Pawesome Pets
       </a>
+
+      <div class="navbar-item has-dropdown is-hoverable">
+        <a href="/blogs/all/all" class="navbar-link">
+          All Communities
+        </a>
+
+        <div class="navbar-dropdown">
+          <a href="/blogs/all/Advice" class="navbar-item">
+            Advice
+          </a>
+          <a href="/blogs/all/Funny" class="navbar-item">
+            Funny Stories
+          </a>
+          <hr class="navbar-divider">
+          <a href="/blogs/all/all" class="navbar-item">
+            All Posts
+          </a>
+        </div>
+      </div>
 
       <div class="navbar-item has-dropdown is-hoverable">
         <a href="/blogs/Cats/all" class="navbar-link">
