--- a/views/allPets.handlebars
+++ b/views/allPets.handlebars
@@ -1,4 +1,5 @@
 <div class="container" id="custom-container">
+  <p class="title is-2 has-text-centered">Pet Pals</p>
   <div class="columns is-centered is-multiline" style="margin-top: 20px; margin-bottom: 20px;">
     {{#each pets as |pet|}}
       <div class="column is-4">
