cleaned up local host hrefs

--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -70,7 +70,7 @@
       <p id="joinus">
         Join us now and start tracking your pet's journey!
       </p>
-      <a href="http://localhost:8080/login" class="button is-primary">Sign Up</a>
+      <a href="/login" class="button is-primary">Sign Up</a>
     </div>
   </div>
 </section>
