--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -14,7 +14,7 @@
 </head>
 <nav class="navbar has-background-warning" role="navigation" aria-label="main navigation" id="navBarBanner">
   <div class="navbar-brand">
-    <a class="navbar-item" href="http://localhost:8080/pets">
+    <a class="navbar-item" href="/pets">
       {{!-- logo image --}}
       <img src="/img/pawsome_care_logo.png" alt="pawsome_care_logo" width="112" height="30" class="logo">
     </a>
